data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_544.wast
;; 5. **Test Description**: Implement a loop with an instruction sequence such that the stack unwinding for a `br` instruction targeting the loop is not done correctly, forcing an infinite loop.    **Constraint Checked**: Ensures stack unwinding is performed correctly when a `br` instruction is executed within a loop.    **Relation to Infinite Loops**: Detects any failures in stack unwinding mechanisms leading to perpetual loop execution.

(assert_invalid
  (module
    (func $infinite_loop
      (result i32)
      (local $start i32)
      (local.set $start (i32.const 1))
      (loop $loop
        (block
          (br $loop)
        )
        (i32.add (local.get $start) (i32.const 1))
      )
    )
  )
  "type mismatch"
)